--- a/css/reset.css
+++ b/css/reset.css
@@ -49,6 +49,7 @@
 html {
   scroll-behavior: smooth;
   -webkit-text-size-adjust: none;
+  font-size: 100%;
 }
 
 body {
